Fix scrollbar

--- a/cuisinecode/src/App.css
+++ b/cuisinecode/src/App.css
@@ -1,18 +1,18 @@
 /* App.css */
 
-.App {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  overflow-y: auto;
-}
-
 body {
   margin: 0;
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: auto;
+  overflow: auto; /* Hide the default body scrollbar */
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  overflow: auto; /* Add scrollbar to the app container */
 }
 
 .header {
@@ -28,7 +28,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1; /* Ensure the header is on top of other elements */
+  transition: top 0.3s; /* Add smooth transition for header movement */
 }
+
+.header-text {
+  color: #fff;
+}
+
+.app-container.scrolling-up .header {
+  top: 140px; /* Move the header off-screen when scrolling up */
+}
+
+.header.scrolling-up {
+  transform: translateY(-140px);
+}
+
 
 .header-text {
   color: #fff;
@@ -56,19 +71,51 @@ body {
   text-align: center;
 }
 
-.Random-Recipe-container img {
-  width: 200px;
+.Random-Recipe-container h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.recipe {
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto 50px;
+  padding: 20px;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.recipe:hover {
+  transform: scale(1.05);
+}
+
+.recipe img {
+  width: 100%;
   height: 200px;
-  margin-bottom: 5px;
-  margin-left: 50px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.recipe-details {
+  text-align: left;
 }
 
 .recipe-name {
-  margin-left: 100px;
-  font-size: 15px;
-  margin-top: 8px;
-  color: #000000;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
 }
+
+.recipe-ingredients {
+  font-size: 14px;
+  color: #666;
+}
+
 
 .right-container {
   flex: 1;
